--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
                 <li><a href="./personal.html" class="services-menu__menu__item">Специалисты</a></li>
                 <li><a href="./sertifications.html" class="services-menu__menu__item">Сертификаты</a></li>
                 <li><a href="./contacts.html" class="services-menu__menu__item">Контакты</a></li>
-                <li><a href="./blog.html" class="services-menu__menu__item">Блог</a></li>  
+                <li><a href="./blog.html" class="services-menu__menu__item">Блог</a></li> 
             </ul>
             <div class="services-menu__wrap">
                 <div class="services-menu__wrap__item">
@@ -136,146 +136,155 @@
             </div>
         </div>
     </div>
-    <section class="main-about-us">
+    <section class="main-blog">
         <div class="container">
-            <div class="main-about-us__links">
+            <div class="main-blog__links">
                 <span>Главная</span>
-                <span>О нас</span>
+                <span>Блог</span>
             </div>
-            <h1 class="main-about-us__title color-yellow">о нас</h1>
-            <div class="main-about-us__descr">
-                Корпорация Дезинфекции специализируется на устранении опасности, идущей от грызунов и насекомых, в квартире, жилом доме или любом другом объекте.             </div>
-        </div>
+            <h1 class="main-blog__title color-yellow">Блог</h1>
+            <div class="main-blog__descr">
+                Наш блог об устранении насекомых, грызунов и микроорганизмов. Узнайте больше об эффективных методиках борьбы с ними и как сделать, чтобы они не появились вновь.
+            </div>
     </section>
-    <section class="description">
+    <section class="posts-list">
         <div class="container">
-            <div class="description__exp">
-                <div class="description__exp__item">
-                    <span class="description__exp__item__num color-yellow">10</span>
-                    <div class="description__exp__item__text color-grey">лет успешной работы</div>
-                </div>
-                <div class="description__exp__item">
-                    <span class="description__exp__item__num color-yellow">25 000</span>
-                    <div class="description__exp__item__text color-grey">клиентов обслужено </div>
-                </div>
-                <div class="description__exp__item">
-                    <span class="description__exp__item__num color-yellow">500+</span>
-                    <div class="description__exp__item__text color-grey">договоров заключено</div>
-                </div>
-                <div class="description__exp__item">
-                    <span class="description__exp__item__num color-yellow">4.9</span>
-                    <div class="description__exp__item__text color-grey">средняя оценка на Яндекс отзывах</div>
-                </div>
+            <div class="posts-list__tabs">
+                <ul>
+                    <li class="posts-list__tabs__item">Все статьи</li>
+                    <li class="posts-list__tabs__item">Уничтожение насекомых</li>
+                    <li class="posts-list__tabs__item">Уничтожение грызунов</li>
+                    <li class="posts-list__tabs__item">Дезинфекции</li>
+                    <li class="posts-list__tabs__item">Дезодорация</li>
+                </ul>
             </div>
-            <div class="description__content-wrap">
-                <div class="description__content-wrap__text color-grey">
-                    <p>
-                        Наша компания уже более 10 лет оказывает санитарные услуги в Москве и области. Мы сотрудничаем с физическими и юридическими лицами. Наши мастера имеют многолетний опыт и высокую квалификацию. В своей работе мы используем современные препараты для обработки и новейшее оборудование - все это позволяет нам предлагать высокое качество работы по доступным ценам.
-                    </p>
-                    <p>
-                        Мы уверены в качестве своих услуг и предоставляем гарантию до 3 лет на все работы. Гарантируем не только достижение максимальных результатов, но и безопасность для здоровья людей и домашних питомцев, и полную сохранность вашего личного имущества.
-                    </p>
-                    <p>
-                        Мы стараемся сделать наши услуги доступными широкому кругу лиц. Для пенсионеров, многодетных, студентов, людей с ограниченными возможностями мы предоставляем специальные сниженные цены.
-                    </p>
-                    <p>
-                        Для юридических лиц мы предлагаем отдельный формат сотрудничества. С владельцами кафе, ресторанов, баров, магазинов, складов и других коммерческих заведений мы можем заключить договор на регулярное сотрудничество. Еще одним нашим ключевым принципом является полная конфиденциальность. О вашей проблеме никто не узнает.
-                    </p>
+            <div class="posts-list__post-wrap">
+                <div class="posts-list__post-wrap__posts-page">
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-1.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Откуда берутся тараканы?</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Чтобы содержать в порядке дачу в сад или огород, нужно иметь железную волю и привычку к физическому труду. Каждый дачник знает, что такое сорняки и…
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="./post.html" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">25.07.2023</span>
+                    </div>
                 </div>
-                <div class="description__content-wrap__data">
-                    <table class="description__content-wrap__data__table">
-                        <thead>
-                            <tr>
-                                <th>Наши реквизиты:</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    ООО
-                                </td>
-                                <td>Корпорация Дезинфекции</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Юридический адрес 
-                                </td>
-                                <td>
-                                    г. Москва ул. Казанская 57 корп. 8а оф. 15
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Фактический адрес 
-                                </td>
-                                <td>
-                                    г. Москва ул. Казанская 57 корп. 8а оф. 15
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    ИНН 
-                                </td>
-                                <td>
-                                    330000000000
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    ОГРНИП
-                                </td>
-                                <td>
-                                    500000000000
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Расчетный счет 
-                                </td>
-                                <td>
-                                    40802 000 1000 0000 0000
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Банк
-                                </td>
-                                <td>
-                                    АО "Тинькофф банк"
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    ИНН банка 
-                                </td>
-                                <td>
-                                    7710 000000
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    БИК банка
-                                </td>
-                                <td>
-                                    044000000
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Корр. счет банка
-                                </td>
-                                <td>
-                                    30101 000 0000 5000 0000
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-2.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Дезинфекция помещения с помощью озона</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Озон является не только веществом, которое предохраняет нашу планету от разрушительного воздействия ультрафиолета, но и отличным дезинфектором. Озонация...
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">13.07.2023</span>
+                    </div>
+                </div>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-3.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Уничтожение насекомых на предприятиях общепита</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Озон является не только веществом, которое предохраняет нашу планету от разрушительного воздействия ультрафиолета, но и отличным дезинфектором. Озонация...
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">06.07.2023</span>
+                    </div>
+                </div>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-4.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Как клопы попадают в дом и пути борьбы с ними</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Нет ничего противнее, когда в квартире заводятся клопы. Во-первых, звук жужжания раздражает намного больше, чем жужжание мух. Во-вторых, при контакте…
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">22.06.2023</span>
+                    </div>
+                </div>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-5.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Откуда в доме берутся мыши и как с ними бороться</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        В обществе бытует мнение, что крысы и мыши живут только там, где антисанитария. Но на самом деле — не факт. Грызуны могут появиться даже в идеально…
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">22.06.2023</span>
+                    </div>
+                </div>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-6.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Мелок от тараканов: эффективное средство/миф</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Любая хозяйка знает, что если в доме появились тараканы или какие-то другие вредные насекомые, стоит очертить по периметру помещения специальным мелком,…
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">13.06.2023</span>
+                    </div>
+                </div>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-7.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Ученые исследуют влияние пестицидов на почву</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Недавно американские ученые заинтересовались влиянием фумигантов на экосистему почв при их использовании в сельском хозяйстве для сохранения урожая.…
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">22.06.2023</span>
+                    </div>
+                </div>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-8.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Фумигация как способ борьбы с насекомыми</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Слово “фумигация” может показаться знакомым. Ведь нам всем известны небольшие бытовые приборы — фумигаторы, которые вставляют в розетку, чтобы они убивали…
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">13.07.2023</span>
+                    </div>
+                </div>
+                <div class="posts-list__post-wrap__posts-page__item">
+                    <div class="posts-list__post-wrap__posts-page__item__img">
+                        <img src="./assets/img/posts/image-9.png" alt="post-img">
+                    </div>
+                    <span class="posts-list__post-wrap__posts-page__item__title color-black">Профессиональная дезинфекция</span>
+                    <div class="posts-list__post-wrap__posts-page__item__text color-grey">
+                        Когда в доме заводятся различные вредоносные насекомые или животные, многие наивно думают, что справятся самостоятельно. Однако когда дело доходит до…
+                    </div>
+                    <div class="posts-list__post-wrap__posts-page__item__link">
+                        <a href="#" class="color-yellow">Читать статью</a>
+                        <span class="posts-list__post-wrap__posts-page__item__link__date color-grey">13.07.2023</span>
+                    </div>
+                </div>
+                </div>
+                <div class="posts-list__post-wrap__quant">
                 </div>
             </div>
         </div>
         <div class="questions__entry">
             <div class="container">
-                <h2 class="questions__entry__title color-black">Хотите задать свой вопрос?</h2>
+                <span class="questions__entry__title color-black">Хотите задать свой вопрос?</span>
                 <div class="questions__entry__form wpcf7-form">
                     <form action="#">
                         <span class="wpcf7-form-control-wrap">
@@ -453,6 +462,7 @@
             </div>
         </div>
     </footer>
+    <script src="./assets/js/blog-page.js"></script>
     <script src="./assets/js/second-script.js"></script>
 </body>
 </html>
