--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="./assets/icon/logo.png" alt="logo">
+                <img src="./assets/icon/favicon.png" alt="logo">
+                <span>Корпорация Дезинфекции</span>
                 <a href="./index.html"></a>
             </div>
             <div class="services">
@@ -32,7 +33,7 @@
                     <li><a href="./personal.html" class="menu__item">Специалисты</a></li>
                     <li><a href="./sertifications.html" class="menu__item">Сертификаты</a></li>
                     <li><a href="./contacts.html" class="menu__item">Контакты</a></li>
-                    <li><a href="./blog.html" class="menu__item">Блог</a></li> 
+                    <li><a href="./blog.html" class="menu__item">Блог</a></li>
                 </ul>
             </nav>
             <div class="phone">
@@ -41,7 +42,7 @@
                         <path d="M3.3953 18.7573L3.49118 18.5045L3.33217 18.2859C2.04885 16.5213 1.2998 14.3558 1.2998 12C1.2998 6.08813 6.08795 1.29999 11.9998 1.29999C17.9117 1.29999 22.6998 6.08813 22.6998 12C22.6998 17.9118 17.9117 22.7 11.9998 22.7C9.83133 22.7 7.7997 22.0577 6.11715 20.936L5.92393 20.8071L5.70085 20.8717L2.21025 21.8815L3.3953 18.7573ZM18.3132 17.0057L18.3315 16.9878L18.3479 16.9681C18.9188 16.283 18.9326 15.2416 18.2999 14.5693L18.2947 14.5638L18.2894 14.5584L16.5254 12.7944C15.6549 11.924 14.1306 12.2608 13.7623 13.4478L13.7622 13.4478L13.7609 13.4523C13.6751 13.7383 13.3087 13.9468 12.9891 13.8669L12.9865 13.8663C12.4776 13.7419 11.8121 13.3249 11.2223 12.7484C10.6317 12.1711 10.2019 11.5166 10.0786 10.99L10.0726 10.964L10.0637 10.9388C9.98191 10.705 10.1425 10.3374 10.5063 10.2063C11.6849 9.83231 12.0172 8.31432 11.1494 7.44643L9.38536 5.68243L9.38 5.67708L9.37449 5.67189C8.71202 5.04839 7.64721 5.03347 6.99825 5.68243L5.79425 6.88643L5.79416 6.88634L5.78613 6.89475C5.37538 7.32506 5.21494 7.90644 5.21951 8.5225C5.22406 9.13713 5.39131 9.82542 5.68098 10.5395C6.26098 11.9691 7.36806 13.5912 8.87359 15.0969C10.3777 16.6151 11.9996 17.7442 13.4342 18.3321C14.1508 18.6258 14.8445 18.7942 15.4668 18.7917C16.0923 18.7891 16.6776 18.6118 17.1111 18.1798L18.3132 17.0057Z" stroke="#F5C233"/>
                     </svg>
                 </div>
-                <span>+7 495 256 99 99</span>
+                <a href="#" class="color-yellow">+7 495 256 99 99</a>
                 <a href="#" class="phone__link">Заказать звонок</a>
             </div>
         </div>
@@ -49,7 +50,7 @@
     <div class="services-menu services-menu__hide">
         <div class="container">
             <h2 class="services-menu__title title-1">Меню</h2>
-            <h2 class="services-menu__title title-2">Услуги</h2>
+            <a href="./services.html" class="services-menu__title title-2 color-yellow">Услуги</a>
             <div class="services-menu__close">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
                     <path clip-rule="evenodd" d="M15.1569 14.0989C14.864 13.806 14.3891 13.806 14.0962 14.0989C13.8033 14.3918 13.8033 14.8666 14.0962 15.1595L28.3506 29.4139L14.0954 43.6692C13.8025 43.9621 13.8025 44.437 14.0954 44.7299C14.3882 45.0228 14.8631 45.0228 15.156 44.7299L29.4113 30.4746L43.6673 44.7306C43.9602 45.0235 44.4351 45.0235 44.728 44.7306C45.0209 44.4378 45.0209 43.9629 44.728 43.67L30.4719 29.4139L44.7271 15.1588C45.02 14.8659 45.02 14.391 44.7271 14.0981C44.4342 13.8052 43.9594 13.8052 43.6665 14.0981L29.4113 28.3533L15.1569 14.0989Z"/>
@@ -141,66 +142,66 @@
                 <span>Главная</span>
                 <span>Наши работы</span>
             </div>
-            <h1 class="main-portfolio__title">наши работы</h1>
+            <h1 class="main-portfolio__title color-yellow">наши работы</h1>
             <div class="main-portfolio__descr">
                 Ежедневно мы проводим обработку квартир и домов от насекомых. Наша задача - устранить вредителей, которые прячутся в самых темных и укромных уголках.        </div>
     </section>
     <section class="portfolio-works">
         <div class="container">
             <div class="portfolio-works__slider">
-                <div class="video-reports__slider__item">
-                    <div class="video-reports__slider__item__img">
+                <div class="portfolio-works__slider__item">
+                    <div class="portfolio-works__slider__item__img">
                         <img src="./assets/img/video/video-poster-1.jpg" alt="video-img">
                     </div>
-                    <div class="video-reports__slider__item__play-btn">
+                    <div class="portfolio-works__slider__item__play-btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55" fill="none">
                             <path d="M49.5996 48.5H5.40043C4.10182 48.5 2.85573 47.9808 1.93647 47.0554C1.01709 46.13 0.5 44.8741 0.5 43.5639V12.4361C0.5 11.1259 1.01709 9.87005 1.93647 8.94459C2.85573 8.01925 4.10182 7.5 5.40043 7.5H49.5996C50.8982 7.5 52.1443 8.01925 53.0635 8.94459C53.9829 9.87005 54.5 11.1259 54.5 12.4361V43.5639C54.5 44.8741 53.9829 46.13 53.0635 47.0554C52.1443 47.9808 50.8982 48.5 49.5996 48.5Z" fill="#212224" fill-opacity="0.35" stroke="white"/>
                             <path d="M20 37.6429V17.358C20 17.1185 20.0638 16.8832 20.1848 16.6761C20.3058 16.469 20.4798 16.2973 20.689 16.1786C20.8983 16.0599 21.1355 15.9983 21.3765 16C21.6174 16.0018 21.8537 16.0669 22.0611 16.1887L39.3294 26.3312C39.5337 26.4513 39.703 26.6223 39.8206 26.8272C39.9382 27.0322 40 27.2641 40 27.5C40 27.7359 39.9382 27.9678 39.8206 28.1728C39.703 28.3777 39.5337 28.5487 39.3294 28.6688L22.0611 38.8113C21.8537 38.9331 21.6176 38.9981 21.3767 39C21.1358 39.0018 20.8987 38.9403 20.6895 38.8216C20.4802 38.703 20.3062 38.5315 20.1851 38.3245C20.0641 38.1175 20.0002 37.8824 20 37.6429Z" fill="white"/>
                         </svg>
                     </div>
-                    <div class="video-reports__slider__item__title">Санобработка офисного помещения в Подмосковье</div>
+                    <div class="portfolio-works__slider__item__title">Санобработка офисного помещения в Подмосковье</div>
                 </div>
-                <div class="video-reports__slider__item">
-                    <div class="video-reports__slider__item__img">
+                <div class="portfolio-works__slider__item">
+                    <div class="portfolio-works__slider__item__img">
                         <img src="./assets/img/video/video-poster-2.jpg" alt="video-img">
                     </div>
-                    <div class="video-reports__slider__item__play-btn">
+                    <div class="portfolio-works__slider__item__play-btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55" fill="none">
                             <path d="M49.5996 48.5H5.40043C4.10182 48.5 2.85573 47.9808 1.93647 47.0554C1.01709 46.13 0.5 44.8741 0.5 43.5639V12.4361C0.5 11.1259 1.01709 9.87005 1.93647 8.94459C2.85573 8.01925 4.10182 7.5 5.40043 7.5H49.5996C50.8982 7.5 52.1443 8.01925 53.0635 8.94459C53.9829 9.87005 54.5 11.1259 54.5 12.4361V43.5639C54.5 44.8741 53.9829 46.13 53.0635 47.0554C52.1443 47.9808 50.8982 48.5 49.5996 48.5Z" fill="#212224" fill-opacity="0.35" stroke="white"/>
                             <path d="M20 37.6429V17.358C20 17.1185 20.0638 16.8832 20.1848 16.6761C20.3058 16.469 20.4798 16.2973 20.689 16.1786C20.8983 16.0599 21.1355 15.9983 21.3765 16C21.6174 16.0018 21.8537 16.0669 22.0611 16.1887L39.3294 26.3312C39.5337 26.4513 39.703 26.6223 39.8206 26.8272C39.9382 27.0322 40 27.2641 40 27.5C40 27.7359 39.9382 27.9678 39.8206 28.1728C39.703 28.3777 39.5337 28.5487 39.3294 28.6688L22.0611 38.8113C21.8537 38.9331 21.6176 38.9981 21.3767 39C21.1358 39.0018 20.8987 38.9403 20.6895 38.8216C20.4802 38.703 20.3062 38.5315 20.1851 38.3245C20.0641 38.1175 20.0002 37.8824 20 37.6429Z" fill="white"/>
                         </svg>
                     </div>
-                    <div class="video-reports__slider__item__title">Дезинфекция районной больницы </div>
+                    <div class="portfolio-works__slider__item__title">Дезинфекция районной больницы </div>
                 </div>
-                <div class="video-reports__slider__prev">
+                <div class="portfolio-works__slider__prev">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
                         <rect x="-0.5" y="0.5" width="39" height="59" rx="1.5" transform="matrix(-1 0 0 1 39 0)" stroke="#C3C3C3"/>
                         <path d="M29 29.25C29.4142 29.25 29.75 29.5858 29.75 30C29.75 30.4142 29.4142 30.75 29 30.75V29.25ZM10.4697 30.5303C10.1768 30.2374 10.1768 29.7626 10.4697 29.4697L15.2426 24.6967C15.5355 24.4038 16.0104 24.4038 16.3033 24.6967C16.5962 24.9896 16.5962 25.4645 16.3033 25.7574L12.0607 30L16.3033 34.2426C16.5962 34.5355 16.5962 35.0104 16.3033 35.3033C16.0104 35.5962 15.5355 35.5962 15.2426 35.3033L10.4697 30.5303ZM29 30.75H11V29.25H29V30.75Z" fill="#C4C4C4"/>
                     </svg>
                 </div>
-                <div class="video-reports__slider__next">
+                <div class="portfolio-works__slider__next">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
                         <rect x="0.75" y="0.75" width="38.5" height="58.5" rx="1.25" stroke="#F5C233" stroke-width="1.5"/>
                         <path d="M11 29.25C10.5858 29.25 10.25 29.5858 10.25 30C10.25 30.4142 10.5858 30.75 11 30.75V29.25ZM29.5303 30.5303C29.8232 30.2374 29.8232 29.7626 29.5303 29.4697L24.7574 24.6967C24.4645 24.4038 23.9896 24.4038 23.6967 24.6967C23.4038 24.9896 23.4038 25.4645 23.6967 25.7574L27.9393 30L23.6967 34.2426C23.4038 34.5355 23.4038 35.0104 23.6967 35.3033C23.9896 35.5962 24.4645 35.5962 24.7574 35.3033L29.5303 30.5303ZM11 30.75H29V29.25H11V30.75Z" fill="#F5C233"/>
                     </svg>
                 </div>
-                <div class="video-reports__slider__dots video-reports__slider__dots__hide">
-                    <div class="video-reports__slider__dots__item"></div>
+                <div class="portfolio-works__slider__dots portfolio-works__slider__dots__hide">
+                    <div class="portfolio-works__slider__dots__item"></div>
                 </div>
             </div>
         </div>
         <div class="questions__entry">
             <div class="container">
-                <h2 class="questions__entry__title">Хотите задать свой вопрос?</h2>
+                <h2 class="questions__entry__title color-black">Хотите задать свой вопрос?</h2>
                 <div class="questions__entry__form wpcf7-form">
                     <form action="#">
                         <span class="wpcf7-form-control-wrap">
-                            <input type="text" placeholder="Ваше имя">
+                            <input type="text" placeholder="Ваше имя" class="color-grey">
                         </span>
                         <span class="wpcf7-form-control-wrap">
-                            <input type="tel" placeholder="Номер телефона*">
+                            <input type="tel" placeholder="Номер телефона*" class="color-grey">
                         </span>
-                        <div class="questions__entry__form__policy">
+                        <div class="questions__entry__form__policy color-black">
                             Отправляя заявку, Вы даете согласие на обработку персональных данных, установленными <a href="#">политикой конфиденциальности</a>
                         </div>
                         <a href="#" class="wpcf7-form-control wpcf7-submit btn">
@@ -264,15 +265,15 @@
                         Круглосуточная служба дезинфекции и дезинсекции в жилых и нежилых помещениях, на открытых пространствах.
                     </div>
                     <ul class="footer-wrap__main__links">
-                        <li><a href="#" class="footer-wrap__main__links__item">Пользовательское соглашение</a></li>
-                        <li><a href="#" class="footer-wrap__main__links__item">Политика конфиденциальности</a></li>
-                        <li><a href="#" class="footer-wrap__main__links__item">Карта сайта</a></li>
+                        <li><a href="#" class="footer-wrap__main__links__item color-yellow">Пользовательское соглашение</a></li>
+                        <li><a href="#" class="footer-wrap__main__links__item color-yellow">Политика конфиденциальности</a></li>
+                        <li><a href="#" class="footer-wrap__main__links__item color-yellow">Карта сайта</a></li>
                     </ul>
                     <span class="footer-wrap__main__entry-title">Оставить заявку:</span>
                     <div class="footer-wrap__main__form wpcf7-form">
                         <form action="#">
                             <span class="wpcf7-form-control-wrap">
-                                <input type="tel" placeholder="Номер телефона*">
+                                <input type="tel" placeholder="Номер телефона*" class="color-grey">
                             </span>
                             <div class="footer-wrap__main__form__policy">
                                 Отправляя заявку, Вы даете согласие на обработку персональных данных, установленными <a href="#">политикой конфиденциальности</a>
@@ -286,7 +287,7 @@
                     </div>
                 </div>
                 <div class="footer-wrap__service">
-                    <h2 class="footer-wrap__service__title">Услуги</h2>
+                    <span class="footer-wrap__service__title">Услуги</span>
                     <ul class="footer-wrap__service__list">
                         <li><a href="#" class="footer-wrap__service__list__link">Услуги для квартир</a></li>
                         <li><a href="#" class="footer-wrap__service__list__link">Документы СЭС</a></li>
@@ -299,7 +300,7 @@
                     </ul>
                 </div>
                 <div class="footer-wrap__menu">
-                    <h2 class="footer-wrap__menu__title">Меню</h2>
+                    <span class="footer-wrap__menu__title">Меню</span>
                     <ul class="footer-wrap__menu__list">
                         <li><a href="#" class="footer-wrap__menu__list__item">О нас</a></li>
                         <li><a href="#" class="footer-wrap__menu__list__item">Наши работы</a></li>
@@ -311,7 +312,7 @@
                     </ul>
                 </div>
                 <div class="footer-wrap__contacts">
-                    <h2 class="footer-wrap__contacts__title">Контакты</h2>
+                    <span class="footer-wrap__contacts__title">Контакты</span>
                     <div class="footer-wrap__contacts__content">
                         <div class="footer-wrap__contacts__content__item">
                             <div class="footer-wrap__contacts__content__item__icon">
@@ -356,7 +357,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-city">
+            <div class="footer-city color-yellow">
                 <span>Богородицк</span>
                 <span>Черноморское</span>
             </div>
@@ -370,5 +371,6 @@
         </div>
     </footer>
     <script src="./assets/js/second-script.js"></script>
+    <script src="./assets/js/portfolio-page.js"></script>
 </body>
 </html>
