--- a/sertifications.html
+++ b/sertifications.html
@@ -13,7 +13,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="./assets/icon/logo.png" alt="logo">
+                <img src="./assets/icon/favicon.png" alt="logo">
+                <span>Корпорация Дезинфекции</span>
                 <a href="./index.html"></a>
             </div>
             <div class="services">
@@ -32,7 +33,7 @@
                     <li><a href="./personal.html" class="menu__item">Специалисты</a></li>
                     <li><a href="./sertifications.html" class="menu__item">Сертификаты</a></li>
                     <li><a href="./contacts.html" class="menu__item">Контакты</a></li>
-                    <li><a href="./blog.html" class="menu__item">Блог</a></li> 
+                    <li><a href="./blog.html" class="menu__item">Блог</a></li>
                 </ul>
             </nav>
             <div class="phone">
@@ -41,7 +42,7 @@
                         <path d="M3.3953 18.7573L3.49118 18.5045L3.33217 18.2859C2.04885 16.5213 1.2998 14.3558 1.2998 12C1.2998 6.08813 6.08795 1.29999 11.9998 1.29999C17.9117 1.29999 22.6998 6.08813 22.6998 12C22.6998 17.9118 17.9117 22.7 11.9998 22.7C9.83133 22.7 7.7997 22.0577 6.11715 20.936L5.92393 20.8071L5.70085 20.8717L2.21025 21.8815L3.3953 18.7573ZM18.3132 17.0057L18.3315 16.9878L18.3479 16.9681C18.9188 16.283 18.9326 15.2416 18.2999 14.5693L18.2947 14.5638L18.2894 14.5584L16.5254 12.7944C15.6549 11.924 14.1306 12.2608 13.7623 13.4478L13.7622 13.4478L13.7609 13.4523C13.6751 13.7383 13.3087 13.9468 12.9891 13.8669L12.9865 13.8663C12.4776 13.7419 11.8121 13.3249 11.2223 12.7484C10.6317 12.1711 10.2019 11.5166 10.0786 10.99L10.0726 10.964L10.0637 10.9388C9.98191 10.705 10.1425 10.3374 10.5063 10.2063C11.6849 9.83231 12.0172 8.31432 11.1494 7.44643L9.38536 5.68243L9.38 5.67708L9.37449 5.67189C8.71202 5.04839 7.64721 5.03347 6.99825 5.68243L5.79425 6.88643L5.79416 6.88634L5.78613 6.89475C5.37538 7.32506 5.21494 7.90644 5.21951 8.5225C5.22406 9.13713 5.39131 9.82542 5.68098 10.5395C6.26098 11.9691 7.36806 13.5912 8.87359 15.0969C10.3777 16.6151 11.9996 17.7442 13.4342 18.3321C14.1508 18.6258 14.8445 18.7942 15.4668 18.7917C16.0923 18.7891 16.6776 18.6118 17.1111 18.1798L18.3132 17.0057Z" stroke="#F5C233"/>
                     </svg>
                 </div>
-                <span>+7 495 256 99 99</span>
+                <a href="#" class="color-yellow">+7 495 256 99 99</a>
                 <a href="#" class="phone__link">Заказать звонок</a>
             </div>
         </div>
@@ -49,7 +50,7 @@
     <div class="services-menu services-menu__hide">
         <div class="container">
             <h2 class="services-menu__title title-1">Меню</h2>
-            <h2 class="services-menu__title title-2">Услуги</h2>
+            <a href="./services.html" class="services-menu__title title-2 color-yellow">Услуги</a>
             <div class="services-menu__close">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
                     <path clip-rule="evenodd" d="M15.1569 14.0989C14.864 13.806 14.3891 13.806 14.0962 14.0989C13.8033 14.3918 13.8033 14.8666 14.0962 15.1595L28.3506 29.4139L14.0954 43.6692C13.8025 43.9621 13.8025 44.437 14.0954 44.7299C14.3882 45.0228 14.8631 45.0228 15.156 44.7299L29.4113 30.4746L43.6673 44.7306C43.9602 45.0235 44.4351 45.0235 44.728 44.7306C45.0209 44.4378 45.0209 43.9629 44.728 43.67L30.4719 29.4139L44.7271 15.1588C45.02 14.8659 45.02 14.391 44.7271 14.0981C44.4342 13.8052 43.9594 13.8052 43.6665 14.0981L29.4113 28.3533L15.1569 14.0989Z"/>
@@ -141,7 +142,7 @@
                 <span>Главная</span>
                 <span>Сертификаты</span>
             </div>
-            <h1 class="main-sertification__title">сертификаты</h1>
+            <h1 class="main-sertification__title color-yellow">сертификаты</h1>
             <div class="main-sertification__descr">
                 Все препараты которые используем мы для работы имеют необходимые сертификаты соответствия, Наша организация проходит все необходимые проверки и ведет документацию 
             </div>
@@ -188,16 +189,16 @@
         </div>
         <div class="questions__entry">
             <div class="container">
-                <h2 class="questions__entry__title">Хотите задать свой вопрос?</h2>
+                <h2 class="questions__entry__title color-black">Хотите задать свой вопрос?</h2>
                 <div class="questions__entry__form wpcf7-form">
                     <form action="#">
                         <span class="wpcf7-form-control-wrap">
-                            <input type="text" placeholder="Ваше имя">
+                            <input type="text" placeholder="Ваше имя" class="color-grey">
                         </span>
                         <span class="wpcf7-form-control-wrap">
-                            <input type="tel" placeholder="Номер телефона*">
+                            <input type="tel" placeholder="Номер телефона*" class="color-grey">
                         </span>
-                        <div class="questions__entry__form__policy">
+                        <div class="questions__entry__form__policy color-black">
                             Отправляя заявку, Вы даете согласие на обработку персональных данных, установленными <a href="#">политикой конфиденциальности</a>
                         </div>
                         <a href="#" class="wpcf7-form-control wpcf7-submit btn">
@@ -261,15 +262,15 @@
                         Круглосуточная служба дезинфекции и дезинсекции в жилых и нежилых помещениях, на открытых пространствах.
                     </div>
                     <ul class="footer-wrap__main__links">
-                        <li><a href="#" class="footer-wrap__main__links__item">Пользовательское соглашение</a></li>
-                        <li><a href="#" class="footer-wrap__main__links__item">Политика конфиденциальности</a></li>
-                        <li><a href="#" class="footer-wrap__main__links__item">Карта сайта</a></li>
+                        <li><a href="#" class="footer-wrap__main__links__item color-yellow">Пользовательское соглашение</a></li>
+                        <li><a href="#" class="footer-wrap__main__links__item color-yellow">Политика конфиденциальности</a></li>
+                        <li><a href="#" class="footer-wrap__main__links__item color-yellow">Карта сайта</a></li>
                     </ul>
                     <span class="footer-wrap__main__entry-title">Оставить заявку:</span>
                     <div class="footer-wrap__main__form wpcf7-form">
                         <form action="#">
                             <span class="wpcf7-form-control-wrap">
-                                <input type="tel" placeholder="Номер телефона*">
+                                <input type="tel" placeholder="Номер телефона*" class="color-grey">
                             </span>
                             <div class="footer-wrap__main__form__policy">
                                 Отправляя заявку, Вы даете согласие на обработку персональных данных, установленными <a href="#">политикой конфиденциальности</a>
@@ -283,7 +284,7 @@
                     </div>
                 </div>
                 <div class="footer-wrap__service">
-                    <h2 class="footer-wrap__service__title">Услуги</h2>
+                    <span class="footer-wrap__service__title">Услуги</span>
                     <ul class="footer-wrap__service__list">
                         <li><a href="#" class="footer-wrap__service__list__link">Услуги для квартир</a></li>
                         <li><a href="#" class="footer-wrap__service__list__link">Документы СЭС</a></li>
@@ -296,7 +297,7 @@
                     </ul>
                 </div>
                 <div class="footer-wrap__menu">
-                    <h2 class="footer-wrap__menu__title">Меню</h2>
+                    <span class="footer-wrap__menu__title">Меню</span>
                     <ul class="footer-wrap__menu__list">
                         <li><a href="#" class="footer-wrap__menu__list__item">О нас</a></li>
                         <li><a href="#" class="footer-wrap__menu__list__item">Наши работы</a></li>
@@ -308,7 +309,7 @@
                     </ul>
                 </div>
                 <div class="footer-wrap__contacts">
-                    <h2 class="footer-wrap__contacts__title">Контакты</h2>
+                    <span class="footer-wrap__contacts__title">Контакты</span>
                     <div class="footer-wrap__contacts__content">
                         <div class="footer-wrap__contacts__content__item">
                             <div class="footer-wrap__contacts__content__item__icon">
@@ -367,5 +368,6 @@
         </div>
     </footer>
     <script src="./assets/js/second-script.js"></script>
+    <script src="./assets/js/sertif-page.js"></script>
 </body>
 </html>
